Closed
Bug 120072
Opened 23 years ago
Closed 23 years ago
Scaling goes into inifnite loop
Categories
(Core :: Printing: Output, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.8
People
(Reporter: rods, Assigned: dcone)
References
()
Details
(Keywords: hang)
Attachments
(1 file)
|
1.97 KB,
patch
|
dcone
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1) edit pagesetupdialog.xul
2) enable the scaling UI controls
3) rebuild xpfe/communicator directory
4) run mozilla
5) open Page Setup
6) set scaling to 70 or 80 %
7) Print Preview the mozilla page
8) it goes into an inifnite loop building the tile
nsImageWin::BuildTile(H
| Reporter | ||
Comment 1•23 years ago
|
||
THis blocks turning on scaling
Severity: normal → blocker
Target Milestone: --- → mozilla0.9.9
| Reporter | ||
Comment 2•23 years ago
|
||
If I back out your change from 1/9 nsImageWin.cpp 3.84 it works fine.
| Reporter | ||
Updated•23 years ago
|
Target Milestone: mozilla0.9.9 → mozilla0.9.8
| Reporter | ||
Comment 3•23 years ago
|
||
fixes a couple of var names and rounding error
| Assignee | ||
Comment 4•23 years ago
|
||
Comment on attachment 65060 [details] [diff] [review]
patch
r=dcone. This works.. me and Rod worked on and tested this fix.
Attachment #65060 -
Flags: review+
Comment 5•23 years ago
|
||
Comment on attachment 65060 [details] [diff] [review]
patch
sr=attinasi
Attachment #65060 -
Flags: superreview+
| Reporter | ||
Comment 6•23 years ago
|
||
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•