Fixes round off error for scaling and fixes to var names Bug 120072 r=dcone sr=attinasi